Added bonemeal capabilities to horse manure

--- a/mcmanure/src/main/resources/assets/mcmanure/lang/en_us.json
+++ b/mcmanure/src/main/resources/assets/mcmanure/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.mcmanure.cow_manure": "Cow Manure",
-  "item.mcmanure.dried_cow_manure": "Dried Cow Manure"
+  "item.mcmanure.dried_cow_manure": "Dried Cow Manure",
+  "item.mcmanure.horse_manure": "Horse Manure",
+  "item.mcmanure.dried_horse_manure": "Dried Horse Manure"
 }
